# screensaver.pingpong

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-screensaver-pingpong.install  rules
screensaver.pingpong/: addon.xml  addon.xml.in
screensaver.pingpong/resources/: settings.xml
screensaver.pingpong/resources/language/resource.language.af_za/: strings.po
screensaver.pingpong/resources/language/resource.language.am_et/: strings.po
screensaver.pingpong/resources/language/resource.language.ar_sa/: strings.po
screensaver.pingpong/resources/language/resource.language.az_az/: strings.po
screensaver.pingpong/resources/language/resource.language.be_by/: strings.po
screensaver.pingpong/resources/language/resource.language.bg_bg/: strings.po
screensaver.pingpong/resources/language/resource.language.bs_ba/: strings.po
screensaver.pingpong/resources/language/resource.language.ca_es/: strings.po
screensaver.pingpong/resources/language/resource.language.cs_cz/: strings.po
screensaver.pingpong/resources/language/resource.language.cy_gb/: strings.po
screensaver.pingpong/resources/language/resource.language.da_dk/: strings.po
screensaver.pingpong/resources/language/resource.language.de_de/: strings.po
screensaver.pingpong/resources/language/resource.language.el_gr/: strings.po
screensaver.pingpong/resources/language/resource.language.en_au/: strings.po
screensaver.pingpong/resources/language/resource.language.en_gb/: strings.po
screensaver.pingpong/resources/language/resource.language.en_nz/: strings.po
screensaver.pingpong/resources/language/resource.language.en_us/: strings.po
screensaver.pingpong/resources/language/resource.language.eo/: strings.po
screensaver.pingpong/resources/language/resource.language.es_ar/: strings.po
screensaver.pingpong/resources/language/resource.language.es_es/: strings.po
screensaver.pingpong/resources/language/resource.language.es_mx/: strings.po
screensaver.pingpong/resources/language/resource.language.et_ee/: strings.po
screensaver.pingpong/resources/language/resource.language.eu_es/: strings.po
screensaver.pingpong/resources/language/resource.language.fa_af/: strings.po
screensaver.pingpong/resources/language/resource.language.fa_ir/: strings.po
screensaver.pingpong/resources/language/resource.language.fi_fi/: strings.po
screensaver.pingpong/resources/language/resource.language.fo_fo/: strings.po
screensaver.pingpong/resources/language/resource.language.fr_ca/: strings.po
screensaver.pingpong/resources/language/resource.language.fr_fr/: strings.po
screensaver.pingpong/resources/language/resource.language.gl_es/: strings.po
screensaver.pingpong/resources/language/resource.language.he_il/: strings.po
screensaver.pingpong/resources/language/resource.language.hi_in/: strings.po
screensaver.pingpong/resources/language/resource.language.hr_hr/: strings.po
screensaver.pingpong/resources/language/resource.language.hu_hu/: strings.po
screensaver.pingpong/resources/language/resource.language.id_id/: strings.po
screensaver.pingpong/resources/language/resource.language.is_is/: strings.po
screensaver.pingpong/resources/language/resource.language.it_it/: strings.po
screensaver.pingpong/resources/language/resource.language.ja_jp/: strings.po
screensaver.pingpong/resources/language/resource.language.ko_kr/: strings.po
screensaver.pingpong/resources/language/resource.language.lt_lt/: strings.po
screensaver.pingpong/resources/language/resource.language.lv_lv/: strings.po
screensaver.pingpong/resources/language/resource.language.mi/: strings.po
screensaver.pingpong/resources/language/resource.language.mk_mk/: strings.po
screensaver.pingpong/resources/language/resource.language.ms_my/: strings.po
screensaver.pingpong/resources/language/resource.language.mt_mt/: strings.po
screensaver.pingpong/resources/language/resource.language.my_mm/: strings.po
src/: main.cpp  main.h  pingpong.cpp  pingpong.h  timer.h  types.h
(+23 files in other folders)
